Refactoring the Profile page code

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -20,8 +20,8 @@
     <script src="/public/bundle.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="//d3js.org/topojson.v1.min.js"></script>
-    <script src="js/mapscript.js"></script>
-    <script src="js/atlanta.js"></script>
+    <!--<script src="js/mapscript.js"></script>-->
+    <!--<script src="js/atlanta.js"></script>-->
 </body>
 
 </html>
