--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,10 +6,8 @@
     <title>BootCruit || Connecting Coding Bootcamp Students to Recruiters and Employers</title>
     <meta name="description=" content="BootCruit is a single-click staffing solution to connect recruiters and employers to current and recently graduated coding bootcamp students.">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     
     <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
     <!--<link rel="stylesheet" type="text/css" href="css/mapstyle.css">-->
