--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     
     <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="css/mapstyle.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="mapstyle.scss.css">-->
 </head>
 
 <body>
