--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,10 +7,8 @@
     <meta name="description=" content="BootCruit is a single-click staffing solution to connect recruiters and employers to current and recently graduated coding bootcamp students.">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
-    
-    <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="mapstyle.scss.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+
 </head>
 
 <body>
@@ -21,8 +19,7 @@
     <script src="/public/bundle.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="//d3js.org/topojson.v1.min.js"></script>
-    <!--<script src="js/mapscript.js"></script>-->
-    <!--<script src="js/atlanta.js"></script>-->
+
 </body>
 
 </html>
