Home page and modal's working fine

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BootCruit || Connecting Coding Bootcamp Students to Recruiters and Employers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description=" content="BootCruit is a single-click staffing solution to connect recruiters and employers to current and recently graduated coding bootcamp students.">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
