--- a/front/public/index.html
+++ b/front/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+
     <script src="https://use.fontawesome.com/fab217840f.js"></script>
     <title>React App</title>
   </head>
